add jshintrc and .vimrc and others

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -75,3 +75,12 @@ unbind C-j
 bind C-j choose-window
 
 set -g default-command "reattach-to-user-namespace -l zsh"
+
+set-window-option -g mode-mouse on
+
+#vim-powerline
+set -g default-terminal "screen-256color"
+
+#http://qiita.com/items/4b6fed00849f8653f9fa
+#use clip board in zsh
+set-option -g default-command "reattach-to-user-namespace -l zsh"
