--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,5 +1,5 @@
 # Prefix
-set -g prefix C-j
+set -g prefix C-t
 # don't use default prefix(C-b)
 unbind C-b
 
@@ -80,3 +80,10 @@ set-window-option -g mode-mouse on
 
 #vim-powerline
 set -g default-terminal "screen-256color"
+
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
