--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,10 +24,9 @@ set -g message-fg white
 set -g message-bg red
 
 # Option
-setw -g utf8 on
 setw -g mode-keys vi
 setw -g automatic-rename off
-set -g mouse-select-pane on
+set -g mouse on
 set -g base-index 1
 
 bind i display-panes
@@ -76,14 +75,13 @@ bind C-j choose-window
 
 set -g default-command "reattach-to-user-namespace -l zsh"
 
-set-window-option -g mode-mouse on
+#set-window-option -g mode-mouse on
 
 #vim-powerline
 set -g default-terminal "screen-256color"
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-move-vi v send-keys -X begin-selection
+bind-key -T copy-move-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
