--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,19 +9,19 @@ set -g status-left-length 16
 set -g status-right-length 50
 
 set -s escape-time 0
-set -g window-status-current-attr underscore
+#set -g window-status-current-attr underscore
 set -g default-terminal "screen-256color"
 
 set -g status-bg black
 set -g status-fg white
-set -g status-attr dim
+#set -g status-attr dim
 
 set -g status-right '#[fg=blue]#(loadavg)#[default] | #[fg=magenta]Mem #(used-mem)%%#[default] | #[fg=red,bold]%y/%m/%d(%a)%H:%M:%S#[default] '
 set -g status-right-length 90
 
-set -g message-attr bold
-set -g message-fg white
-set -g message-bg red
+#set -g message-attr bold
+#set -g message-fg white
+#set -g message-bg red
 
 # Option
 setw -g mode-keys vi
@@ -73,15 +73,15 @@ bind j select-pane -D
 unbind C-j
 bind C-j choose-window
 
-set -g default-command "reattach-to-user-namespace -l zsh"
+#set -g default-command "reattach-to-user-namespace -l zsh"
 
 #set-window-option -g mode-mouse on
 
 #vim-powerline
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
-bind-key -T copy-move-vi v send-keys -X begin-selection
-bind-key -T copy-move-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-move-vi v send-keys -X begin-selection
+#bind-key -T copy-move-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
