Make it possible to run Ctrl-a and Ctrl-e

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,7 +10,7 @@
 	excludesfile = /Users/katryo/.gitignore_global
 	precomposeunicode = true
 [user]
-	name = Ryo Kato
+	name = katryo
 	email = katoryo55@gmail.com
 [http]
     sslVerify = false
@@ -44,3 +44,8 @@
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
