--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+unbind C-a
+
 # Prefix
 set -g prefix C-t
 # don't use default prefix(C-b)
@@ -9,19 +11,14 @@ set -g status-left-length 16
 set -g status-right-length 50
 
 set -s escape-time 0
-#set -g window-status-current-attr underscore
 set -g default-terminal "screen-256color"
 
 set -g status-bg black
 set -g status-fg white
-#set -g status-attr dim
 
 set -g status-right '#[fg=blue]#(loadavg)#[default] | #[fg=magenta]Mem #(used-mem)%%#[default] | #[fg=red,bold]%y/%m/%d(%a)%H:%M:%S#[default] '
 set -g status-right-length 90
 
-#set -g message-attr bold
-#set -g message-fg white
-#set -g message-bg red
 
 # Option
 setw -g mode-keys vi
@@ -73,6 +70,8 @@ bind j select-pane -D
 unbind C-j
 bind C-j choose-window
 
+set-window-option -g xterm-keys on
+
 #set -g default-command "reattach-to-user-namespace -l zsh"
 
 #set-window-option -g mode-mouse on
@@ -85,3 +84,7 @@ bind C-j choose-window
 
 # Update default binding of `Enter` to also use copy-pipe
 #bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# https://askubuntu.com/questions/1155199/ctrl-a-and-ctrl-e-map-incorrectly-in-tmux
+#set -g mode-keys emacs
+#set -g status-keys emacs
